now fixed top gap

--- a/public/stylesheets/dashStyle.css
+++ b/public/stylesheets/dashStyle.css
@@ -227,3 +227,7 @@ nav {
 .mt {
     margin-top: 5vh;
 }
+
+#textheader {
+    padding-top: 10px;
+}
